socket-server/k8s/overlays/dev/deployment.tmpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: socket-server
spec:
    replicas: 1
    template:
        spec:
            containers:
                - name: socket-server
                  image: $DOCKER_IMAGE
