socket-server/k8s/overlays/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: socket-server
spec:
    template:
        spec:
            containers:
                - name: socket-server
                  image: localhost:5000/socket-server:16
