socket-server/k8s/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: ingress-socket-server
    annotations:
        nginx.ingress.kubernetes.io/affinity: 'cookie'
        nginx.ingress.kubernetes.io/session-cookie-name: 'route'
        nginx.ingress.kubernetes.io/session-cookie-expires: '172800'
        nginx.ingress.kubernetes.io/session-cookie-max-age: '172800'
spec:
    rules:
        - host: socket-server.127.0.0.1.nip.io
          http:
              paths:
                  - path: /
                    backend:
                        serviceName: socket-server
                        servicePort: 80
